<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical" >
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:background="@drawable/line" />

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/home_page"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/icon_fun"
            android:gravity="center"
            android:text="@string/home_page"
            android:textColor="@drawable/select_text" />

        <RadioButton
            android:id="@+id/activities"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_function2"
            android:gravity="center"
            android:text="@string/Activities"
            android:textColor="@drawable/select_text" />

        <RadioButton
            android:id="@+id/Personal_Center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_fun3"
            android:gravity="center"
            android:text="@string/Personal_Center"
            android:textColor="@drawable/select_text" />
    </RadioGroup>

</LinearLayout>